Allow Vercel and production origins in CORS config